--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.21.0",
     "classnames": "^2.2.6",
     "css-loader": "^5.0.1",
+    "http-proxy-middleware": "^1.0.6",
     "node-sass": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
