--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass-loader": "^10.0.5",
     "storybook": "^6.0.28",
     "style-loader": "^2.0.0",
+    "swiper": "^6.3.5",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
