--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "classnames": "^2.2.6",
     "css-loader": "^5.0.1",
     "http-proxy-middleware": "^1.0.6",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-moment": "^1.0.0",
     "react-scripts": "4.0.0",
     "sass-loader": "^10.0.5",
     "storybook": "^6.0.28",
